--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,10 @@
 {
   "singleQuote": true,
+  "printWidth": 100,
+  "semi": true,
+  "tabWidth": 2,
+  "bracketSpacing": true,
+  "endOfLine": "auto",
   "trailingComma": "all",
   "importOrder": [
     "^@nestjs/(.*)$",
@@ -8,6 +13,6 @@
   ],
   "importOrderSeparation": true,
   "importOrderSortSpecifiers": true,
-  "importOrderParserPlugins": ["typescript", "decorators"],
+  "importOrderParserPlugins": ["typescript", "decorators-legacy"],
   "plugins": ["@trivago/prettier-plugin-sort-imports"]
 }
