--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,11 +1,10 @@
 {
-    "type": "postgres",
-    "host": "localhost",
-    "port": 5432,
-    "username": "postgres",
-    "password": "password",
-    "database": "testdb",
-    "entities": ["dist/**/*.entity{.ts,.js}"],
-    "synchronize": true
-  }
-  
+  "type": "postgres",
+  "host": "localhost",
+  "port": 5432,
+  "username": "postgres",
+  "password": "postgres",
+  "database": "nestjs_test",
+  "entities": ["dist/**/*.entity{.ts,.js}"],
+  "synchronize": true
+}
